Building header (and adjusting classes with the tailwin prefix

--- a/sections/liz-announcement-bar.liquid
+++ b/sections/liz-announcement-bar.liquid
@@ -1,5 +1,5 @@
-<div class="announcement-bar color-{{ section.settings.color_scheme }} flex justify-center align-center lg:h-[50px] h-[35px]">
-  <span class="lg:text-[14px] text-[11px] font-bold uppercase leading-[20px]">{{ section.settings.text }}</span>
+<div class="announcement-bar color-{{ section.settings.color_scheme }} tw-flex tw-justify-center tw-align-center lg:tw-h-[50px] tw-h-[35px]">
+  <span class="lg:tw-text-[14px] tw-text-[11px] tw-font-bold tw-uppercase tw-leading-[20px]">{{ section.settings.text }}</span>
 </div>
 {% schema %}
 {
