--- a/assets/style.css
+++ b/assets/style.css
@@ -554,155 +554,270 @@ video {
   --tw-contain-style:  ;
 }
 
-.container {
-  width: 100%;
+.tw-absolute {
+  position: absolute;
 }
 
-@media (min-width: 640px) {
-  .container {
-    max-width: 640px;
-  }
+.tw-relative {
+  position: relative;
 }
 
-@media (min-width: 768px) {
-  .container {
-    max-width: 768px;
-  }
+.tw-right-0 {
+  right: 0px;
 }
 
-@media (min-width: 1024px) {
-  .container {
-    max-width: 1024px;
-  }
+.tw-top-0 {
+  top: 0px;
 }
 
-@media (min-width: 1280px) {
-  .container {
-    max-width: 1280px;
-  }
+.tw-right-\[-5px\] {
+  right: -5px;
 }
 
-@media (min-width: 1536px) {
-  .container {
-    max-width: 1536px;
-  }
+.tw-top-\[-3px\] {
+  top: -3px;
 }
 
-.fixed {
-  position: fixed;
+.\!tw-block {
+  display: block !important;
 }
 
-.sticky {
-  position: sticky;
-}
-
-.isolate {
-  isolation: isolate;
-}
-
-.block {
-  display: block;
-}
-
-.flex {
+.tw-flex {
   display: flex;
 }
 
-.table {
-  display: table;
-}
-
-.grid {
-  display: grid;
-}
-
-.hidden {
+.tw-hidden {
   display: none;
 }
 
-.h-\[50px\] {
-  height: 50px;
-}
-
-.h-\[35px\] {
+.tw-h-\[35px\] {
   height: 35px;
 }
 
-.transform {
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+.tw-h-\[10px\] {
+  height: 10px;
 }
 
-.flex-wrap {
-  flex-wrap: wrap;
+.tw-h-\[75px\] {
+  height: 75px;
 }
 
-.justify-center {
+.tw-h-full {
+  height: 100%;
+}
+
+.tw-h-fit {
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
+.tw-w-\[10px\] {
+  width: 10px;
+}
+
+.tw-w-\[195px\] {
+  width: 195px;
+}
+
+.tw-w-\[1px\] {
+  width: 1px;
+}
+
+.tw-max-w-\[120px\] {
+  max-width: 120px;
+}
+
+.tw-items-center {
+  align-items: center;
+}
+
+.tw-justify-center {
   justify-content: center;
 }
 
-.truncate {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
+.tw-justify-between {
+  justify-content: space-between;
 }
 
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
+.tw-gap-\[40px\] {
+  gap: 40px;
 }
 
-.text-\[14px\] {
-  font-size: 14px;
+.tw-gap-x-12 {
+  -moz-column-gap: 3rem;
+       column-gap: 3rem;
 }
 
-.text-\[11px\] {
+.tw-gap-x-\[48px\] {
+  -moz-column-gap: 48px;
+       column-gap: 48px;
+}
+
+.tw-gap-x-\[30px\] {
+  -moz-column-gap: 30px;
+       column-gap: 30px;
+}
+
+.tw-rounded-full {
+  border-radius: 9999px;
+}
+
+.tw-border {
+  border-width: 1px;
+}
+
+.tw-border-l {
+  border-left-width: 1px;
+}
+
+.tw-border-r {
+  border-right-width: 1px;
+}
+
+.tw-border-\[\#C4C4C4\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(196 196 196 / var(--tw-border-opacity));
+}
+
+.tw-border-\[\#D8D8D8\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(216 216 216 / var(--tw-border-opacity));
+}
+
+.tw-bg-\[\#005BC4\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 91 196 / var(--tw-bg-opacity));
+}
+
+.tw-p-\[20px\] {
+  padding: 20px;
+}
+
+.tw-px-\[25px\] {
+  padding-left: 25px;
+  padding-right: 25px;
+}
+
+.tw-px-\[20px\] {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.tw-py-\[10px\] {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.tw-pr-\[30px\] {
+  padding-right: 30px;
+}
+
+.tw-text-center {
+  text-align: center;
+}
+
+.tw-text-\[11px\] {
   font-size: 11px;
 }
 
-.font-bold {
+.tw-text-\[8px\] {
+  font-size: 8px;
+}
+
+.tw-text-\[13px\] {
+  font-size: 13px;
+}
+
+.tw-text-\[12px\] {
+  font-size: 12px;
+}
+
+.tw-text-\[14px\] {
+  font-size: 14px;
+}
+
+.tw-font-bold {
   font-weight: 700;
 }
 
-.uppercase {
+.tw-font-black {
+  font-weight: 900;
+}
+
+.tw-uppercase {
   text-transform: uppercase;
 }
 
-.capitalize {
-  text-transform: capitalize;
-}
-
-.italic {
-  font-style: italic;
-}
-
-.leading-snug {
-  line-height: 1.375;
-}
-
-.leading-\[20px\] {
+.tw-leading-\[20px\] {
   line-height: 20px;
 }
 
-.shadow {
-  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+.tw-text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.outline {
-  outline-style: solid;
+.tw-text-\[\#FF2500\] {
+  --tw-text-opacity: 1;
+  color: rgb(255 37 0 / var(--tw-text-opacity));
 }
 
-.filter {
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+.tw-text-\[\#4A4A4A\] {
+  --tw-text-opacity: 1;
+  color: rgb(74 74 74 / var(--tw-text-opacity));
+}
+
+.tw-underline {
+  text-decoration-line: underline;
 }
 
 @media (min-width: 1024px) {
-  .lg\:h-\[50px\] {
+  .lg\:tw-top-\[-5px\] {
+    top: -5px;
+  }
+
+  .lg\:tw-block {
+    display: block;
+  }
+
+  .lg\:tw-flex {
+    display: flex;
+  }
+
+  .lg\:tw-hidden {
+    display: none;
+  }
+
+  .lg\:tw-h-\[50px\] {
     height: 50px;
   }
 
-  .lg\:text-\[14px\] {
+  .lg\:tw-h-\[150px\] {
+    height: 150px;
+  }
+
+  .lg\:tw-h-\[15px\] {
+    height: 15px;
+  }
+
+  .lg\:tw-w-\[15px\] {
+    width: 15px;
+  }
+
+  .lg\:tw-max-w-\[230px\] {
+    max-width: 230px;
+  }
+
+  .lg\:tw-px-\[50px\] {
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+
+  .lg\:tw-text-\[14px\] {
     font-size: 14px;
+  }
+
+  .lg\:tw-text-\[10px\] {
+    font-size: 10px;
   }
 }
