--- a/assets/tailwind_build.css
+++ b/assets/tailwind_build.css
@@ -562,14 +562,6 @@ video {
   position: relative;
 }
 
-.tw-right-0 {
-  right: 0px;
-}
-
-.tw-top-0 {
-  top: 0px;
-}
-
 .tw-right-\[-5px\] {
   right: -5px;
 }
@@ -578,53 +570,102 @@ video {
   top: -3px;
 }
 
-.\!tw-block {
-  display: block !important;
+.tw-left-0 {
+  left: 0px;
+}
+
+.tw-top-1\/2 {
+  top: 50%;
+}
+
+.tw-top-full {
+  top: 100%;
+}
+
+.tw-top-3\/4 {
+  top: 75%;
+}
+
+.tw-mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.tw-mx-\[10px\] {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.-tw-mt-\[50px\] {
+  margin-top: -50px;
 }
 
 .tw-flex {
   display: flex;
 }
 
-.tw-hidden {
-  display: none;
+.tw-inline-flex {
+  display: inline-flex;
 }
 
-.tw-h-\[35px\] {
-  height: 35px;
+.tw-hidden {
+  display: none;
 }
 
 .tw-h-\[10px\] {
   height: 10px;
 }
 
-.tw-h-\[75px\] {
-  height: 75px;
+.tw-h-\[35px\] {
+  height: 35px;
 }
 
-.tw-h-full {
-  height: 100%;
+.tw-h-\[50px\] {
+  height: 50px;
 }
 
-.tw-h-fit {
-  height: -moz-fit-content;
-  height: fit-content;
+.tw-h-\[65px\] {
+  height: 65px;
 }
 
 .tw-w-\[10px\] {
   width: 10px;
 }
 
+.tw-w-\[150px\] {
+  width: 150px;
+}
+
 .tw-w-\[195px\] {
   width: 195px;
 }
 
-.tw-w-\[1px\] {
-  width: 1px;
+.tw-w-full {
+  width: 100%;
 }
 
 .tw-max-w-\[120px\] {
   max-width: 120px;
+}
+
+.tw-max-w-\[600px\] {
+  max-width: 600px;
+}
+
+.tw-max-w-\[660px\] {
+  max-width: 660px;
+}
+
+.tw-max-w-full {
+  max-width: 100%;
+}
+
+.tw-max-w-\[calc\(100\%-20px\)\] {
+  max-width: calc(100% - 20px);
+}
+
+.tw-flex-wrap {
+  flex-wrap: wrap;
 }
 
 .tw-items-center {
@@ -643,14 +684,8 @@ video {
   gap: 40px;
 }
 
-.tw-gap-x-12 {
-  -moz-column-gap: 3rem;
-       column-gap: 3rem;
-}
-
-.tw-gap-x-\[48px\] {
-  -moz-column-gap: 48px;
-       column-gap: 48px;
+.tw-gap-\[20px\] {
+  gap: 20px;
 }
 
 .tw-gap-x-\[30px\] {
@@ -658,16 +693,21 @@ video {
        column-gap: 30px;
 }
 
+.tw-gap-x-\[48px\] {
+  -moz-column-gap: 48px;
+       column-gap: 48px;
+}
+
 .tw-rounded-full {
   border-radius: 9999px;
 }
 
-.tw-border {
-  border-width: 1px;
+.tw-rounded-lg {
+  border-radius: 0.5rem;
 }
 
-.tw-border-l {
-  border-left-width: 1px;
+.tw-border {
+  border-width: 1px;
 }
 
 .tw-border-r {
@@ -689,8 +729,9 @@ video {
   background-color: rgb(0 91 196 / var(--tw-bg-opacity));
 }
 
-.tw-p-\[20px\] {
-  padding: 20px;
+.tw-px-\[20px\] {
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .tw-px-\[25px\] {
@@ -698,18 +739,47 @@ video {
   padding-right: 25px;
 }
 
-.tw-px-\[20px\] {
-  padding-left: 20px;
-  padding-right: 20px;
-}
-
 .tw-py-\[10px\] {
   padding-top: 10px;
   padding-bottom: 10px;
 }
 
+.tw-px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.tw-py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
 .tw-pr-\[30px\] {
   padding-right: 30px;
+}
+
+.tw-pb-\[30px\] {
+  padding-bottom: 30px;
+}
+
+.tw-pb-\[45px\] {
+  padding-bottom: 45px;
+}
+
+.tw-pb-\[20px\] {
+  padding-bottom: 20px;
+}
+
+.tw-pb-\[13px\] {
+  padding-bottom: 13px;
+}
+
+.tw-pt-\[22px\] {
+  padding-top: 22px;
+}
+
+.tw-pb-\[24px\] {
+  padding-bottom: 24px;
 }
 
 .tw-text-center {
@@ -720,28 +790,44 @@ video {
   font-size: 11px;
 }
 
-.tw-text-\[8px\] {
-  font-size: 8px;
+.tw-text-\[12px\] {
+  font-size: 12px;
 }
 
 .tw-text-\[13px\] {
   font-size: 13px;
 }
 
-.tw-text-\[12px\] {
-  font-size: 12px;
-}
-
 .tw-text-\[14px\] {
   font-size: 14px;
+}
+
+.tw-text-\[8px\] {
+  font-size: 8px;
+}
+
+.tw-text-\[20px\] {
+  font-size: 20px;
+}
+
+.tw-text-\[80px\] {
+  font-size: 80px;
+}
+
+.tw-text-\[36px\] {
+  font-size: 36px;
+}
+
+.tw-font-black {
+  font-weight: 900;
 }
 
 .tw-font-bold {
   font-weight: 700;
 }
 
-.tw-font-black {
-  font-weight: 900;
+.tw-font-medium {
+  font-weight: 500;
 }
 
 .tw-uppercase {
@@ -752,14 +838,8 @@ video {
   line-height: 20px;
 }
 
-.tw-text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.tw-text-\[\#FF2500\] {
-  --tw-text-opacity: 1;
-  color: rgb(255 37 0 / var(--tw-text-opacity));
+.tw-leading-tight {
+  line-height: 1.25;
 }
 
 .tw-text-\[\#4A4A4A\] {
@@ -767,13 +847,86 @@ video {
   color: rgb(74 74 74 / var(--tw-text-opacity));
 }
 
+.tw-text-\[\#FF2500\] {
+  --tw-text-opacity: 1;
+  color: rgb(255 37 0 / var(--tw-text-opacity));
+}
+
+.tw-text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
 .tw-underline {
   text-decoration-line: underline;
 }
 
+@media (min-width: 768px) {
+  .md\:tw-absolute {
+    position: absolute;
+  }
+
+  .md\:tw-left-0 {
+    left: 0px;
+  }
+
+  .md\:tw-top-1\/2 {
+    top: 50%;
+  }
+
+  .md\:tw-mx-\[100px\] {
+    margin-left: 100px;
+    margin-right: 100px;
+  }
+
+  .md\:tw-my-\[50px\] {
+    margin-top: 50px;
+    margin-bottom: 50px;
+  }
+
+  .md\:tw-max-w-\[660px\] {
+    max-width: 660px;
+  }
+
+  .md\:-tw-translate-y-1\/2 {
+    --tw-translate-y: -50%;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+
+  .md\:\!tw-bg-transparent {
+    background-color: transparent !important;
+  }
+}
+
 @media (min-width: 1024px) {
+  .lg\:tw-absolute {
+    position: absolute;
+  }
+
   .lg\:tw-top-\[-5px\] {
     top: -5px;
+  }
+
+  .lg\:tw-left-0 {
+    left: 0px;
+  }
+
+  .lg\:tw-top-1\/2 {
+    top: 50%;
+  }
+
+  .lg\:tw-mx-\[100px\] {
+    margin-left: 100px;
+    margin-right: 100px;
+  }
+
+  .lg\:tw-my-\[50px\] {
+    margin-top: 50px;
+    margin-bottom: 50px;
+  }
+
+  .lg\:tw-mt-0 {
+    margin-top: 0px;
   }
 
   .lg\:tw-block {
@@ -788,16 +941,16 @@ video {
     display: none;
   }
 
-  .lg\:tw-h-\[50px\] {
-    height: 50px;
-  }
-
-  .lg\:tw-h-\[150px\] {
-    height: 150px;
+  .lg\:tw-h-\[145px\] {
+    height: 145px;
   }
 
   .lg\:tw-h-\[15px\] {
     height: 15px;
+  }
+
+  .lg\:tw-h-\[50px\] {
+    height: 50px;
   }
 
   .lg\:tw-w-\[15px\] {
@@ -808,16 +961,72 @@ video {
     max-width: 230px;
   }
 
+  .lg\:tw-max-w-\[660px\] {
+    max-width: 660px;
+  }
+
+  .lg\:-tw-translate-y-1\/2 {
+    --tw-translate-y: -50%;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+
+  .lg\:tw-justify-between {
+    justify-content: space-between;
+  }
+
+  .lg\:tw-border-0 {
+    border-width: 0px;
+  }
+
+  .lg\:\!tw-bg-transparent {
+    background-color: transparent !important;
+  }
+
+  .lg\:\!tw-bg-none {
+    background-image: none !important;
+  }
+
   .lg\:tw-px-\[50px\] {
     padding-left: 50px;
     padding-right: 50px;
+  }
+
+  .lg\:tw-py-\[100px\] {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
+
+  .lg\:tw-px-\[100px\] {
+    padding-left: 100px;
+    padding-right: 100px;
+  }
+
+  .lg\:tw-py-\[50px\] {
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
+
+  .lg\:tw-pb-\[45px\] {
+    padding-bottom: 45px;
+  }
+
+  .lg\:tw-pb-\[30px\] {
+    padding-bottom: 30px;
+  }
+
+  .lg\:tw-text-\[10px\] {
+    font-size: 10px;
   }
 
   .lg\:tw-text-\[14px\] {
     font-size: 14px;
   }
 
-  .lg\:tw-text-\[10px\] {
-    font-size: 10px;
+  .lg\:tw-text-\[20px\] {
+    font-size: 20px;
+  }
+
+  .lg\:tw-text-\[80px\] {
+    font-size: 80px;
   }
 }
