--- a/sections/liz-announcement-bar.liquid
+++ b/sections/liz-announcement-bar.liquid
@@ -1,4 +1,4 @@
-<div class="announcement-bar color-{{ section.settings.color_scheme }} tw-flex tw-justify-center tw-align-center lg:tw-h-[50px] tw-h-[35px]">
+<div class="liz-announcement-bar color-{{ section.settings.color_scheme }} tw-flex tw-justify-center tw-items-center lg:tw-h-[50px] tw-h-[35px]">
   <span class="lg:tw-text-[14px] tw-text-[11px] tw-font-bold tw-uppercase tw-leading-[20px]">{{ section.settings.text }}</span>
 </div>
 {% schema %}
