Changing Hero heading to an h2

--- a/sections/liz-hero.liquid
+++ b/sections/liz-hero.liquid
@@ -24,7 +24,7 @@
       <p class="tw-font-medium tw-uppercase lg:tw-text-[20px] tw-text-[14px] lg:tw-pb-[30px] tw-pb-[13px]">{{ section.settings.subhead_text }}</p>
     {% endif %}
     {% if section.settings.main_text != blank %}
-      <p class="tw-font-bold lg:tw-text-[80px] tw-text-[36px] lg:tw-pb-[45px] tw-pb-[20px] tw-leading-tight tw-mx-auto">{{ section.settings.main_text }}</p>
+      <h2 class="tw-font-bold lg:tw-text-[80px] tw-text-[36px] lg:tw-pb-[45px] tw-pb-[20px] tw-leading-tight tw-mx-auto">{{ section.settings.main_text }}</h2>
     {% endif %}
     {% if section.blocks.size > 0 %}
       <div class="tw-flex lg:tw-justify-between tw-justify-center tw-items-center tw-gap-[20px] tw-flex-wrap">
